<resources>
    <string name="app_name">NewCalculationAndMaps</string>
    <string name="tab_collections"> Collections</string>
    <string name="tab_maps" > Map</string>
    <string name="operations">Elements</string>
    <string name="threads">Threads</string>
    <string name="start">Start</string>>
    <string name="threads_empty">Treads can`t be empty</string>
    <string name="elements_empty">Elements can`t be empty</string>
...
